Fix the slider dot issue on mobile

--- a/custom-elm-responsive.css
+++ b/custom-elm-responsive.css
@@ -521,7 +521,7 @@
   #muqkMH .slideshow__slide .slideshow__image,
   #wlFgeE .slideshow__slide .slideshow__image,
   #QtmjFN .slideshow__slide .slideshow__image {
-    padding: 20px 6px 20px 0px;
+    padding: 20px 6px 50px 0px;
   }
   #TkHGsd .regular-line-button,
   #eXHEyW .regular-line-button,
