--- a/custom-elm.css
+++ b/custom-elm.css
@@ -1301,7 +1301,7 @@ div#\31 a177201-2c51-11ec-a533-2114c163d007 {
 #muqkMH .slideshow__slide .slideshow__image,
 #wlFgeE .slideshow__slide .slideshow__image,
 #QtmjFN .slideshow__slide .slideshow__image {
-  padding: 25px 100px;
+  padding: 25px 100px 50px;
 }
 #cmLnfK .slideshow__slide .slideshow__image .image__wrapper,
 #kbHKcR .slideshow__slide .slideshow__image .image__wrapper,
